tests/expectations/compiler/libraries/library_type_mismatch_fail.out
Error [ETYC0372117]: Expected type `u32` but type `bool` was found.
    --> compiler-test:1:16
     |
   1 | const X: u32 = true;
     |                ^^^^
